--- a/src/app/components/fundamental/style.module.css
+++ b/src/app/components/fundamental/style.module.css
@@ -7,6 +7,136 @@
    padding-bottom: 10%;
 
 }
+.cardheading1{
+    /* Vision */
+
+position: absolute;
+width: 169.01px;
+height: 35.61px;
+left: 125.08px;
+top: 1495.72px;
+
+font-family: 'Poppins';
+font-style: normal;
+font-weight: 600;
+font-size: 37px;
+line-height: 56px;
+text-align: center;
+
+color: #000000;
+
+
+}
+
+.cardheading2{
+position: absolute;
+width: 169.01px;
+height: 35.61px;
+left: 519.08px;
+top: 1495.72px;
+
+font-family: 'Poppins';
+font-style: normal;
+font-weight: 600;
+font-size: 37px;
+line-height: 56px;
+text-align: center;
+
+color: #000000;
+
+
+}
+
+.cardheading3{
+
+position: absolute;
+width: 169.01px;
+height: 35.61px;
+left: 910.08px;
+top: 1495.72px;
+
+font-family: 'Poppins';
+font-style: normal;
+font-weight: 600;
+font-size: 37px;
+line-height: 56px;
+text-align: center;
+
+color: #000000;
+
+
+}
+.cardtxt1{
+    /* To be a world-class SaaS Player for healthcare */
+
+position: absolute;
+width: 375.38px;
+height: 127.77px;
+left: 50px;
+top: 1550.65px;
+
+font-family: 'Poppins';
+font-style: normal;
+font-weight: 400;
+font-size: 20px;
+line-height: 30px;
+text-align: center;
+
+color: #636363;
+
+
+}
+.cardtxt2{
+    /* To be a world-class SaaS Player for healthcare */
+
+position: absolute;
+width: 375.38px;
+height: 127.77px;
+left: 445px;
+top: 1550.65px;
+
+font-family: 'Poppins';
+font-style: normal;
+font-weight: 400;
+font-size: 20px;
+line-height: 30px;
+text-align: center;
+
+color: #636363;
+
+
+}
+.cardtxt3{
+    /* To be a world-class SaaS Player for healthcare */
+
+position: absolute;
+width: 375.38px;
+height: 127.77px;
+left: 835px;
+top: 1550.65px;
+
+font-family: 'Poppins';
+font-style: normal;
+font-weight: 400;
+font-size: 20px;
+line-height: 30px;
+text-align: center;
+
+color: #636363;
+
+
+}
+.cards p {
+    font-family: 'Poppins';
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 30px;
+    padding: 2%;
+    text-align: center;
+    justify-content: center;
+    color: #636363;
+    margin-bottom: 20px; /* Add margin to the bottom of the paragraph */
+}
 
 .container h1{
     color: #5F687B;
@@ -26,18 +156,22 @@
    flex-wrap: wrap;
    gap: 40px;
 }
-.cards{
+.cards {
     align-items: center;
     width: 350px;
     height: 350px;
     border-radius: 15px;
     box-shadow: 0px 4px 18px 0px #63636354;
+    border-bottom: 20px solid transparent; /* Add a transparent border to create space at the bottom */
 }
+
+
 /* .cards img{
     margin: 0 0 0 5% ;
    
 } */
 .cards h2{
+    
    font-family: 'Poppins',sans-serif;
    font-weight: 550;
    font-size: 30px;
@@ -45,17 +179,6 @@
    align-items: center;
    color: #000000;
   padding-left: 32%;
-
-}
-.cards p{
-    font-family: 'Poppins';
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 30px;
-    padding: 2%;
-    text-align: center;
-    justify-content: center;
-    color: #636363;
 
 }
 /* .cards:hover{
