--- a/src/app/components/partner/style.module.css
+++ b/src/app/components/partner/style.module.css
@@ -29,7 +29,7 @@
     
 
     .partner button {
-        background-color: #344D67;
+        background-color: #27005D;
         border: none;
         color: #ffffff;
         font-family: 'Poppins',sans-serif;
@@ -60,7 +60,7 @@
 
     .partner button {
         margin-top: 1rem;
-        background-color: #344D67;
+        background-color: #27005D;
         border: none;
         color: #ffffff;
         font-family: 'Poppins',sans-serif;
