--- a/src/app/components/contact/style.module.css
+++ b/src/app/components/contact/style.module.css
@@ -87,7 +87,30 @@
     height: 30px;
     border: 1px solid #B5B5B5
 }
+.nameinput{
+    /* Rectangle 25 */
 
+position: absolute;
+width: 12.32px;
+height: 11.45px;
+left: 760.21px;
+top: 3342.79px; 
+
+border-radius: 5px;
+
+}
+
+.emailinput{
+
+    position: absolute;
+    width: 82.32px;
+    height: 11.45px;
+    left: 965.21px;
+    top: 3342.79px;
+    
+    border-radius: 5px;
+    
+    }
 .subject p {
     font-family: 'Poppins';
     font-weight: 500;
